--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,37 @@
-h1 {
-    text-align: center;
-    background-color: aquamarine;
+html{
+    box-sizing: border-box;
 }
 
-li{
-    font-family: sans-serif;
+*,
+*::before,
+*::after{
+    box-sizing: inherit;
+}
+
+
+.header{
+    text-align: center;
+    background-color: aquamarine;
+    width: 350px;
+    margin: 10px auto;
+    border: 1px solid black;
+}
+
+.recipelinks{
+    background-color: powderblue;
+    border: 1px dotted black;
+    width: 450px;
+    margin: auto;
+}
+
+.links{
+    padding: 5px;
+    
+}
+
+ul{
+    text-align: center;
+    padding: 0;
+    list-style-position: inside;
+    list-style: none;
 }
