--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html{
     box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 *,
@@ -9,12 +10,17 @@ html{
 }
 
 
+
 .header{
     text-align: center;
     background-color: aquamarine;
     width: 350px;
     margin: 10px auto;
     border: 1px solid black;
+}
+
+.header.recipe{
+    background-color: blanchedalmond;
 }
 
 .recipelinks{
@@ -29,9 +35,41 @@ html{
     
 }
 
-ul{
+.homepagelist{
     text-align: center;
     padding: 0;
     list-style-position: inside;
     list-style: none;
+}
+
+img{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.descrip{
+    text-align: center;
+    width:500px;
+    margin: auto; 
+    font-family: "Times New Roman", sans-serif;
+}
+
+.ingcontainer{
+    background-color: bisque;
+    padding-top: 5px;
+    border: 1px solid cornflowerblue;
+    
+}
+
+.ingredients{
+    width: 150px;
+    text-align: center;
+    margin-left: 20px;
+    background-color: whitesmoke;  
+}
+
+.inglist{
+padding-bottom: 5px;
 }
