--- a/styles.css
+++ b/styles.css
@@ -58,15 +58,15 @@ img{
 
 .ingcontainer{
     background-color: bisque;
-    padding-top: 5px;
+    padding: 5px 5px 5px 10px;
+    margin: 0 auto;
     border: 1px solid cornflowerblue;
     
 }
 
 .ingredients{
-    width: 150px;
     text-align: center;
-    margin-left: 20px;
+    width: 15%;
     background-color: whitesmoke;  
 }
 
