set min and max widths

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,9 @@ img{
 .ingcontainer{
     background-color: bisque;
     width: 50%;
-    padding: 5px 5px 5px 10px;
+    min-width: 500px;
+    max-width: 500px;
+    padding: 5px;
     margin: 0 auto;
     border: 1px solid cornflowerblue;
     
@@ -67,9 +69,9 @@ img{
 
 .ingredients{
     width:25%;
+    min-width: 200px;
+    max-width: 200px;
     margin: 0 auto;
     background-color: whitesmoke;  
-    padding: 5px;
     text-align: center;
-    box-sizing: border-box;
 }
