--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,8 @@ img{
 
 .ingcontainer,
 .instcontainer{
+    display: block;
+    width: 1000px;
     background-color: bisque;
     padding: 5px;
     border: 1px solid cornflowerblue;   
