mobile screen code test

--- a/styles.css
+++ b/styles.css
@@ -58,12 +58,22 @@ img{
 .ingcontainer,
 .instcontainer{
     display: block;
-    width: 1000px;
+    width: 100%;
+    max-width: 1000px;
     background-color: bisque;
     padding: 5px;
     border: 1px solid cornflowerblue;   
 }
 
+@media only screen and (max-width) {
+    .ingcontainer,
+    .instcontainer{
+        display: block;
+        width: 100%;
+        max-width: none;
+
+    }
+}
 .ingcontainer{
     margin: 0 auto;
 }
