--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ img{
     border: 1px solid cornflowerblue;   
 }
 
-@media only screen and (max-width) {
+@media only screen and (max-width: 500px) {
     .ingcontainer,
     .instcontainer{
         display: block;
