--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html{
 .recipelinks{
     background-color: powderblue;
     border: 1px dotted black;
-    width: 50%;
+    max-width: 500px;
     margin: auto;
 }
 
